# Terminal_chat_bot

./: Cargo.toml
src/: main.rs
