[package]
name = "cli_chat_app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
codegen-units = 1
lto = true

[dependencies]
bytesize = "1.2.0"
env_logger = "0.10.0"
log = "0.4.19"
rand = "0.8.5"
rustyline = "12.0.0"
clap = { version = "4.3.19", features = ["derive"] }




llm = { git = "https://github.com/rustformers/llm" , branch = "main" }
